[project]
name = "hantang-add"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Ovler", email = "ovlertheyoung@gmail.com"},
]
dependencies = ["streamlit>=1.40.2", "SQLAlchemy>=2.0.36", "requests>=2.32.3", "pymysql>=1.1.1", "plotly>=6.0.0", "cryptography>=44.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false
